Made transfer payments optional.

--- a/src/lang/english.txt
+++ b/src/lang/english.txt
@@ -1663,6 +1663,8 @@ STR_CONFIG_SETTING_REVERSE_AT_SIGNALS_HELPTEXT                  :Allow trains to
 
 STR_CONFIG_SETTING_QUERY_CAPTION                                :{WHITE}Change setting value
 
+STR_CONFIG_SETTING_ECONOMY_TRANSFER_PAYMENT                     :Get paid upon cargo transfer: {STRING2}
+
 # Config errors
 STR_CONFIG_ERROR                                                :{WHITE}Error with the configuration file...
 STR_CONFIG_ERROR_ARRAY                                          :{WHITE}... error in array '{RAW_STRING}'
