--- a/src/lang/english.txt
+++ b/src/lang/english.txt
@@ -3295,8 +3295,8 @@ STR_GROUP_REMOVE_ALL_VEHICLES                                   :Remove all vehi
 
 STR_GROUP_RENAME_CAPTION                                        :{BLACK}Rename a group
 
-STR_GROUP_PROFIT_THIS_YEAR										:{BLACK}Profit this year: {CURRENCY}
-STR_GROUP_PROFIT_LAST_YEAR										:{BLACK}Profit last year: {CURRENCY}
+STR_GROUP_PROFIT_THIS_YEAR                                      :{BLACK}Profit this year: {CURRENCY_LONG}
+STR_GROUP_PROFIT_LAST_YEAR                                      :{BLACK}Profit last year: {CURRENCY_LONG}
 
 
 # Build vehicle window
